force-app/main/default/objects/Order_Line_Item__c/fields/Adjustment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Schedule__c</fullName>
    <label>Pricing Schedule</label>
    <length>8</length>
    <type>Text</type>
</CustomField>