force-app/main/default/objects/Order_Line_Item__c/fields/Allocation_Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Date_Requested__c</fullName>
    <label>Allocation Date (Requested)</label>
    <type>Date</type>
</CustomField>