force-app/main/default/objects/Order_Line_Item__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Line Items (Bill To)</relationshipLabel>
    <relationshipName>Bill_To_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>