force-app/main/default/objects/Order_Line_Item__c/fields/Branch_Plant__c.field-meta.xml
<CustomField>
    <fullName>Branch_Plant__c</fullName>
    <label>Branch Plant</label>
    <length>12</length>
    <type>Text</type>
</CustomField>