force-app/main/default/objects/Order_Line_Item__c/fields/Cancel_Change_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Change_Reason_Code__c</fullName>
    <description>Created as part of SE-960: This field captures Cancel/Change Reason Codes</description>
    <label>Cancel/Change Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>DUP</fullName>
                <label>DUPLICATE/CONVERSION</label>
            </value>
            <value>
                <fullName>ENA</fullName>
                <label>EQUIPMENT NOT AVAILABLE</label>
            </value>
            <value>
                <fullName>MBO</fullName>
                <label>MIS-BOOKED ORDER</label>
            </value>
            <value>
                <fullName>OCA</fullName>
                <label>9025 - Override Code Added</label>
            </value>
            <value>
                <fullName>OCD</fullName>
                <label>9025 - Override Code Deleted</label>
            </value>
            <value>
                <fullName>OCR</fullName>
                <label>9025 - Override Code Revised</label>
            </value>
            <value>
                <fullName>ODC</fullName>
                <label>9001 - On/Off Date Change</label>
            </value>
            <value>
                <fullName>PNO</fullName>
                <label>PATIENT NEVER ON</label>
            </value>
            <value>
                <fullName>SB</fullName>
                <label>SUBSTITUTION</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>