force-app/main/default/objects/Order_Line_Item__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <label>Carrier</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>