force-app/main/default/objects/Order_Line_Item__c/fields/FedEx_Track_Code__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Track_Code__c</fullName>
    <label>FedEx Track Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>