force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC20_Available_Quantity__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_Available_Quantity__c</fullName>
    <description>Available Quantity of a part returned by Inventory check integration to JDE. SE-2780</description>
    <label>Available Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>