force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC20_Extended_Price__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC20_Extended_Price__c</fullName>
    <description>Extended price returned from JDE pricing integration representing customer line total</description>
    <label>Extended Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>