force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC21_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC21_Error_Message__c</fullName>
    <description>Field to display any integration error messages</description>
    <label>Integration Error Message</label>
    <type>TextArea</type>
</CustomField>