force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Actual_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Actual_Request_Date__c</fullName>
    <label>Actual Request Date</label>
    <type>Date</type>
</CustomField>