force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Actual_Request_Time__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Actual_Request_Time__c</fullName>
    <label>Actual Request Time</label>
    <type>DateTime</type>
</CustomField>