force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Alternate_Italy_PO__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Alternate_Italy_PO__c</fullName>
    <description>SE-940</description>
    <label>Alternate Italy PO#?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>