force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Asset__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>