force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Cancelation_Approver__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Cancelation_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as part of SE-960: This field is a lookup to User</description>
    <label>Cancelation Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>