force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Cancellation_Reason_Notes__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Cancellation_Reason_Notes__c</fullName>
    <description>SE-997</description>
    <label>Cancellation Reason Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>