force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Contact_Method__c</fullName>
    <description>SE-997</description>
    <label>Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Busy (booked in ServiceCloud)</fullName>
            </value>
            <value>
                <fullName>FieldService Lightning</fullName>
            </value>
            <value>
                <fullName>Hillrom Direct</fullName>
                <isActive>false</isActive>
                <label>Hillrom Direct</label>
            </value>
            <value>
                <fullName>Rental Online</fullName>
                <isActive>false</isActive>
                <label>Rental Online</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>