force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Contact_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>