force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Customer_Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Customer_Cost_Center__c</fullName>
    <label>Customer Cost Center</label>
    <length>50</length>
    <type>Text</type>
</CustomField>