force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Customer_Request_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Customer_Request_Date_Time__c</fullName>
    <description>Created this for #SE-112</description>
    <label>Customer Request Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>