force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Data_Migration_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Data_Migration_Status__c</fullName>
    <description>Created to track records that have been updated during various steps in data migration prep for Service Cloud 1.0 go live for Care Comm</description>
    <label>HRCSVC Data Migration Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>