force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Default_Request_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Default_Request_Date_and_Time__c</fullName>
    <description>SE-997</description>
    <label>Default Request Date and Time</label>
    <type>DateTime</type>
</CustomField>