force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Delivery_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Delivery_Number__c</fullName>
    <formula>HRCSVC_Shipment__r.HRCSVC_Delivery_Number__c</formula>
    <label>Delivery Number</label>
    <type>Text</type>
</CustomField>