force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Desired_Part_Configuration__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Desired_Part_Configuration__c</fullName>
    <description>SE 42</description>
    <label>Desired Part Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>