force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Disable_Component_Edit__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Disable_Component_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Developed this for #SE-1008</description>
    <label>Disable Component Edit</label>
    <type>Checkbox</type>
</CustomField>