force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Entitlement_Name__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Entitlement_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entitlement Name</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>