force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Equipment_OFF_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Equipment_OFF_Date__c</fullName>
    <description>Created this for #SE-1032</description>
    <label>Equipment OFF Date</label>
    <type>Date</type>
</CustomField>