force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Fulfillment_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Fulfillment_Type__c</fullName>
    <label>Fulfillment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Depot</fullName>
            </value>
            <value>
                <fullName>Field Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>