force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Handling_Unit__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Handling_Unit__c</fullName>
    <formula>HRCSVC_Shipment__r.HRCSVC_Handling_Unit__c</formula>
    <label>Handling Unit</label>
    <type>Text</type>
</CustomField>