force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Handling_Unit_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Handling_Unit_Created_Date__c</fullName>
    <formula>HRCSVC_Shipment__r.HRCSVC_Handling_Unit_Created_Date__c</formula>
    <label>Handling Unit Created Date</label>
    <type>Date</type>
</CustomField>