force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Item_Description__c</fullName>
    <description>SE-1600 - Add formula field for Item Description via Product.</description>
    <formula>Product__r.Description</formula>
    <label>Item Description</label>
    <type>Text</type>
</CustomField>