force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_LFEE_Material_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_LFEE_Material_Description__c</fullName>
    <formula>HRCSVC_LFEE_Product__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LFEE Material Description</label>
    <type>Text</type>
</CustomField>