force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_LFEE_Product__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_LFEE_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LFEE Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Order Line Items (LFEE Product)</relationshipLabel>
    <relationshipName>Order_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>