force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Loaner_Material_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Loaner_Material_Description__c</fullName>
    <formula>Product__r.Description</formula>
    <label>Loaner Material Description</label>
    <type>Text</type>
</CustomField>