force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Options_Required__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Options_Required__c</fullName>
    <description>SE 42</description>
    <label>Options Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interp</fullName>
            </value>
            <value>
                <fullName>DICOM</fullName>
            </value>
            <value>
                <fullName>Pediatric Interp</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
            <value>
                <fullName>Expanded memory (med)</fullName>
            </value>
            <value>
                <fullName>Modem</fullName>
            </value>
            <value>
                <fullName>Expanded memory (high)</fullName>
            </value>
            <value>
                <fullName>LAN</fullName>
            </value>
            <value>
                <fullName>15 Lead</fullName>
            </value>
            <value>
                <fullName>WLAN-B</fullName>
            </value>
            <value>
                <fullName>Multi-Site</fullName>
            </value>
            <value>
                <fullName>WLAN-G2</fullName>
            </value>
            <value>
                <fullName>WAM</fullName>
            </value>
            <value>
                <fullName>WLAN-G2  Quadtech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>