force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Order_Line_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Order_Line_Item_Status__c</fullName>
    <description>Created as part of SE-960. This field represents Order Line Item status</description>
    <label>Order Line Item Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Completed Rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>