force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Override_Amount__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Override_Amount__c</fullName>
    <description>SE-76 - provide pricing override codes and additional fields on a rental order line after order creation.</description>
    <label>Override Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>