force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Override_Code__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Override_Code__c</fullName>
    <label>Override Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>009 - CUSTOMER RELATIONS (MSC)</fullName>
            </value>
            <value>
                <fullName>CAP - N/C CAPPED UNIT</fullName>
            </value>
            <value>
                <fullName>DEMO - DEMO ZERO BILLING</fullName>
            </value>
            <value>
                <fullName>EHZ - EQUIPMENT HOLD - ZERO BILLED</fullName>
            </value>
            <value>
                <fullName>EQH - EQUIPMENT HOLD</fullName>
            </value>
            <value>
                <fullName>HOLD - ORDER ON HOLD</fullName>
            </value>
            <value>
                <fullName>NB0 - N/C FREE PER CONTRACT</fullName>
            </value>
            <value>
                <fullName>NB1 - N/C FREE TRIAL&amp;EVALUATION</fullName>
            </value>
            <value>
                <fullName>PAO - PRICE AS ORDERED</fullName>
            </value>
            <value>
                <fullName>R/P - N/C-RENT TO PURCH CONTRAC</fullName>
            </value>
            <value>
                <fullName>ROMZ - ZERO BILL:  RENTAL ORDMGMT ONLY</fullName>
            </value>
            <value>
                <fullName>RTP - RENT TO PURCHASE</fullName>
            </value>
            <value>
                <fullName>SSI - N/C-RELATIVE OF EMPLOYEE</fullName>
            </value>
            <value>
                <fullName>SUB - SUBSTITUTION CANCEL</fullName>
            </value>
            <value>
                <fullName>ZER - ZERO BILLING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>