force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Override_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Override_Effective_Date__c</fullName>
    <description>SE-76 - provide pricing override codes and additional fields on a rental order line after order creation.</description>
    <label>Override Effective Date</label>
    <type>Date</type>
</CustomField>