force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Override_Reason__c</fullName>
    <description>SE-76</description>
    <label>Override Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 - BILLING ISSUES</fullName>
            </value>
            <value>
                <fullName>3 - DME MAX</fullName>
            </value>
            <value>
                <fullName>4 - INACTIVE</fullName>
            </value>
            <value>
                <fullName>5 - INSURANCE TERMED</fullName>
            </value>
            <value>
                <fullName>6 - LIFETIME MEDICAL MAX MET</fullName>
            </value>
            <value>
                <fullName>7 - MEDICARE DENIAL</fullName>
            </value>
            <value>
                <fullName>8 - PECOS</fullName>
            </value>
            <value>
                <fullName>9 - CHANGE OF INSURANCE</fullName>
            </value>
            <value>
                <fullName>10 - WOPD ERROR</fullName>
            </value>
            <value>
                <fullName>11 - INVALID AUTH</fullName>
            </value>
            <value>
                <fullName>12 - PATIENT DECEASED</fullName>
            </value>
            <value>
                <fullName>13 - PRED CLAIM</fullName>
            </value>
            <value>
                <fullName>14 - PRED PAID</fullName>
            </value>
            <value>
                <fullName>15 - PRED DENIED</fullName>
            </value>
            <value>
                <fullName>16 - REAUTH</fullName>
            </value>
            <value>
                <fullName>20 - EQUIPMENT/DEVICE RETURNED</fullName>
            </value>
            <value>
                <fullName>21 - USE ASSESSMENT</fullName>
            </value>
            <value>
                <fullName>22 - UA/DC APPROVED</fullName>
            </value>
            <value>
                <fullName>23 - UA/DC PENDING</fullName>
            </value>
            <value>
                <fullName>24 - REFER TO SELF-PAY/FOUNDATION</fullName>
            </value>
            <value>
                <fullName>25 - MEDICARE PENDING 10 MO LETTER</fullName>
            </value>
            <value>
                <fullName>26 - ADMIN ITEM REQUESTED</fullName>
            </value>
            <value>
                <fullName>28 - HOSPICE</fullName>
            </value>
            <value>
                <fullName>29 - INPATIENT / SNF</fullName>
            </value>
            <value>
                <fullName>30 - PENDING PRIMARY EOB</fullName>
            </value>
            <value>
                <fullName>31 - PRIMARY DENIED/PURSUING 2ND</fullName>
            </value>
            <value>
                <fullName>32 - APPEAL REVIEW</fullName>
            </value>
            <value>
                <fullName>33 - CONVERSION</fullName>
            </value>
            <value>
                <fullName>34 - 30 DAY AUDIT LETTER DENIED</fullName>
            </value>
            <value>
                <fullName>35 - MEDICARE SECONDARY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>