force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Paging_Team__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Paging_Team__c</fullName>
    <description>Created this for #SE-997</description>
    <label>Paging Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HRCFSL_Paging_Team</valueSetName>
    </valueSet>
</CustomField>