force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Patient_Room__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Patient_Room__c</fullName>
    <label>Patient Room #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>