force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_PO_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_PO_Expiration_Date__c</fullName>
    <description>Crated this for #SE-1032</description>
    <label>PO Expiration Date</label>
    <type>Date</type>
</CustomField>