force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_PO_Number__c</fullName>
    <label>PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>