force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Prevent_Additional_WO_Creation__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Prevent_Additional_WO_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#SE:318 Created a checkbox to stop creating WO when the OLI is created</description>
    <label>Prevent Additional WO Creation</label>
    <type>Checkbox</type>
</CustomField>