force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Previous_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Previous_Activity_Type__c</fullName>
    <label>Previous Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HRCFSL_Activity_Type</valueSetName>
    </valueSet>
</CustomField>