force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Price__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Price__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>