force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Price_Method_Code__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Price_Method_Code__c</fullName>
    <description>#SE-994</description>
    <label>Price Method Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HRCSVC_Price_Method_Code</valueSetName>
    </valueSet>
</CustomField>