force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Pricing_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Pricing_Unit_of_Measure__c</fullName>
    <label>Pricing Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Units</fullName>
            </value>
            <value>
                <fullName>Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>