force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Product_Name__c</fullName>
    <label>Product Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>