force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Promissed_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Promissed_Ship_Date__c</fullName>
    <label>Promissed Ship Date</label>
    <type>Date</type>
</CustomField>