force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Quantity_Back_Ordered__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Quantity_Back_Ordered__c</fullName>
    <label>Quantity Back Ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>