force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Quantity_Canceled__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Quantity_Canceled__c</fullName>
    <label>Quantity Canceled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>