force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Requested_Date__c</fullName>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>