force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Scheduled_Date__c</fullName>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>