force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Serial_Number__c</fullName>
    <description>SE 42</description>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>