force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Service_Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Service_Market_Segment__c</fullName>
    <description>SE-940</description>
    <label>Service Market Segment?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>