force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Shipment__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment</label>
    <referenceTo>Shipment</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>