force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Shipment_Date__c</fullName>
    <description>SE-179</description>
    <formula>HRCSVC_Shipment__r.HRCSVC_Shipment_Date__c</formula>
    <label>Shipment Date</label>
    <type>Date</type>
</CustomField>