force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Shipment_On_Time__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Shipment_On_Time__c</fullName>
    <formula>IF(HRCSVC_Actual_Ship_Date__c  &lt;=  HRCSVC_Requested_Date__c, true, false)</formula>
    <label>Shipment On Time</label>
    <type>Checkbox</type>
</CustomField>