force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Shipment_Status__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Shipment_Status__c</fullName>
    <formula>TEXt(HRCSVC_Shipment__r.Status )</formula>
    <label>Shipment Status</label>
    <type>Text</type>
</CustomField>