force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Software_Version__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Software_Version__c</fullName>
    <label>Software Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>