force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Special_Instructions__c</fullName>
    <label>Special Instructions</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>