force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Standing_PO__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Standing_PO__c</fullName>
    <label>Standing PO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>