force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Start_Date__c</fullName>
    <label>Billing On Date</label>
    <type>Date</type>
</CustomField>