force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Tracking_Number__c</fullName>
    <formula>HRCSVC_Shipment__r.TrackingNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracking Number</label>
    <type>Text</type>
</CustomField>