force-app/main/default/objects/Order_Line_Item__c/fields/HRCSVC_Tracking_URL__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Tracking_URL__c</fullName>
    <formula>HRCSVC_Shipment__r.TrackingUrl</formula>
    <label>Tracking URL</label>
    <type>Text</type>
</CustomField>